--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         <activity android:name=".ui.activities.PostDetailsActivity"></activity>
         <activity android:name=".ui.activities.StartupDetailsActivity" />
         <activity android:name=".ui.activities.StartupListActivity" />
-        <activity android:name=".ui.activities.LoginActivity">
+        <activity
+            android:name=".ui.activities.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
